src/objects/PaymentCondition__c.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>客户名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>回款情况 (客户名称)</relationshipLabel>
        <relationshipName>AccountNamePayment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractAmount__c</fullName>
        <label>合同总额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>说明</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FinalAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>最终用户名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>回款情况</relationshipLabel>
        <relationshipName>FinalAccountPayment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymenyThisWeek__c</fullName>
        <label>本周回款金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WeeklyReport__c</fullName>
        <label>销售周报</label>
        <referenceTo>SalesWeeklyReport__c</referenceTo>
        <relationshipLabel>回款情况</relationshipLabel>
        <relationshipName>WeeklyReport</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>回款情况</label>
    <nameField>
        <displayFormat>Pay-{0000000}</displayFormat>
        <label>回款情况编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>回款情况</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>